--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -3,3 +3,4 @@
 @import "./ItemsList/items";
 @import "./BlogCard/blogCard";
 @import "./CastsList/castsList";
+@import "./GalleryList/galleryList";
