--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -4,3 +4,4 @@
 @import "./BlogCard/blogCard";
 @import "./CastsList/castsList";
 @import "./GalleryList/galleryList";
+@import "./ItemModal/itemModal";
